--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,13 @@
 			<artifactId>swagger-models</artifactId>
 			<version>1.5.20</version>
 		</dependency>
-
-
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.8</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
