--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
-server.port=8080
-#H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-#Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+server.port=8090
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/example
 spring.datasource.username=root
 spring.datasource.password=Root@123
-spring.datasource.driver-class-name=org.h2.Driver
